url: http://localhost:3000
---
- launchApp:
    clearState: true

# 1. Login
- assertVisible: Welcome back
- tapOn:
    css: "#username"
- eraseText
- inputText: admin
- tapOn:
    css: "#password"
- inputText: password
- tapOn: Continue

# 2. Dashboard
- assertVisible: Your spaces

# 3. Tap profile icon in top right corner
- tapOn:
    css: "a[href='/profile']"

# 4. Verify Profile page
- assertVisible: "Personal Profile"
- assertVisible: "Account Information"
